Some restyling to stop the blockchain overflowing

--- a/packages/letters-of-credit/src/stylesheets/css/main.css
+++ b/packages/letters-of-credit/src/stylesheets/css/main.css
@@ -238,13 +238,16 @@
   margin: 3vh; }
 
 .LCcontainer {
+  display: flex;
+  flex-direction: column;
   background-color: #f5f6fa;
   width: 100%;
-  height: -webkit-fill-available; }
+  height: 100vh; }
   .LCcontainer > br {
     clear: left; }
 
 .LCHeader {
+  width: 100%;
   height: 50px;
   background-color: white;
   border-bottom: 1px solid #ebeef5; }
@@ -273,30 +276,35 @@
   text-align: center;
   margin-right: 5%; }
 
-.cardsContainer {
-  width: 60%; }
-  .cardsContainer > div > span {
-    margin-bottom: 10px; }
+.letterContents {
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+  height: 60%; }
 
-.letterContent > div {
+.cardsContainer {
+  display: flex;
+  flex-direction: column;
+  width: 80%; }
+
+.detailsCards > div {
   display: block;
   float: left;
-  width: 20%;
+  width: 25%;
   margin: 2%;
   text-align: left; }
 
 .rules {
   display: block;
   text-align: left;
-  width: 76.5%;
   margin: 2%; }
   .rules > ul {
     list-style-type: none;
-    margin: 0;
-    padding: 0; }
+    margin: 0; }
 
 .actions {
-  padding-right: 1%;
+  padding-top: 10px;
+  padding-right: 5%;
   display: flex;
   justify-content: flex-end; }
   .actions > button {
@@ -325,11 +333,11 @@
   bottom: 0;
   right: 25%;
   margin: auto;
-  z-index: 999999999; }
+  z-index: 100; }
 
-.bottomHack {
-  display: flex;
-  justify-content: space-between; }
+.blockChainContainer {
+  width: 20%;
+  max-height: 50%; }
 
 .userInfo {
   display: inline-block;
@@ -358,6 +366,7 @@
   padding-left: 5px;
   align-items: center;
   display: flex;
+  min-height: 75px;
   margin: 0;
   color: #95989a; }
 
@@ -378,22 +387,17 @@
   display: inline-block; }
 
 .BlockChainDisplay {
-  position: absolute;
-  bottom: 0;
-  right: 0;
-  top: 20%;
   overflow: auto;
   display: flex;
-  flex-direction: column;
+  flex-direction: column-reverse;
   height: 100%;
-  padding-right: 10%; }
+  padding-right: 5%; }
 
 .greyBlock {
   padding-left: 5px;
   padding-top: 10px;
   align-items: center;
-  margin: 0;
-  /*width: 50%;*/ }
+  margin: 0; }
 
 .greyBlockLine {
   background-color: #ddd;
