--- a/packages/letters-of-credit/src/stylesheets/sass/components/_block.scss
+++ b/packages/letters-of-credit/src/stylesheets/sass/components/_block.scss
@@ -2,6 +2,7 @@
   padding-left: 5px;
   align-items: center;
   display: flex;
+  min-height: 75px;
   margin: 0;
   color: #95989a;
 }
