--- a/packages/letters-of-credit/src/stylesheets/sass/components/_blockchaindisplay.scss
+++ b/packages/letters-of-credit/src/stylesheets/sass/components/_blockchaindisplay.scss
@@ -1,14 +1,10 @@
 .BlockChainDisplay {
-  position: absolute;
-  bottom: 0;
-  right: 0;
-  top: 20%;
-  // width: 100%;
+
   overflow: auto;
   display: flex;
-  flex-direction: column;
+  flex-direction: column-reverse;
   height: 100%;
-  padding-right: 10%;
+  padding-right: 5%;
 }
 
 .greyBlock {
@@ -16,7 +12,6 @@
   padding-top: 10px;
   align-items: center;
   margin: 0;
-  /*width: 50%;*/
 }
 
 .greyBlockLine {
