--- a/packages/letters-of-credit/src/stylesheets/sass/layout/_letterofcredit.scss
+++ b/packages/letters-of-credit/src/stylesheets/sass/layout/_letterofcredit.scss
@@ -1,7 +1,9 @@
 .LCcontainer {
+  display: flex;
+  flex-direction: column;
   background-color: #f5f6fa;
   width: 100%;
-  height: -webkit-fill-available;
+  height: 100vh;
 
   > br {
     clear: left;
@@ -9,6 +11,7 @@
 }
 
 .LCHeader {
+  width: 100%;
   height: 50px;
   background-color: white;
   border-bottom: 1px solid #ebeef5;
@@ -44,19 +47,25 @@
   margin-right: 5%;
 }
 
-.cardsContainer {
-  width: 60%;
+.letterContents {
 
-  > div > span {
-    margin-bottom: 10px;
-  }
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+  height: 60%;
 }
 
-.letterContent {
+.cardsContainer {
+  display: flex;
+  flex-direction: column;
+  width: 80%;
+}
+
+.detailsCards {
   > div {
     display: block;
     float: left;
-    width: 20%;
+    width: 25%;
     margin: 2%;
     text-align: left;
   }
@@ -65,18 +74,17 @@
 .rules {
   display: block;
   text-align: left;
-  width: 76.5%;
   margin: 2%;
 
   > ul {
     list-style-type: none;
     margin: 0;
-    padding: 0;
   }
 }
 
 .actions {
-  padding-right: 1%;
+  padding-top: 10px;
+  padding-right: 5%;
   display: flex;
   justify-content: flex-end;
 
@@ -111,16 +119,12 @@
   bottom: 0;
   right: 25%;
   margin: auto;
-  z-index: 999999999;
+  z-index: 100;
 }
 
 .blockChainContainer {
-
-}
-
-.bottomHack {
-  display: flex;
-  justify-content: space-between;
+  width: 20%;
+  max-height: 50%;
 }
 
 .userInfo {
